Change version to 0.23 snapshot

--- a/deploy/docker-compose/docker-compose-postgres.yml
+++ b/deploy/docker-compose/docker-compose-postgres.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   app:
-    image: ghcr.io/logicleai/logicle:v0.21.0
+    image: ghcr.io/logicleai/logicle:v0.23.0-snapshot
     restart: always
     environment:
       PORT: 80
