--- a/logicle/package.json
+++ b/logicle/package.json
@@ -39,6 +39,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
+    "@modelcontextprotocol/sdk": "^1.16.0",
     "@openrouter/ai-sdk-provider": "^0.4.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
