Playing with download / copy

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -32,6 +32,7 @@
     "@aws-sdk/lib-storage": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.696.0",
     "@aws-sdk/util-format-url": "^3.734.0",
+    "@bkfullstack/table-to-excel": "^1.0.10",
     "@boxyhq/saml-jackson": "1.45.0",
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/lint": "^6.8.4",
@@ -76,6 +77,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "eventsource-parser": "^1.0.0",
+    "exceljs": "^4.4.0",
     "form-data": "^4.0.2",
     "google-auth-library": "^9.15.1",
     "i18next": "^24.1.0",
