--- a/logicle/package.json
+++ b/logicle/package.json
@@ -20,12 +20,12 @@
     "build-ci": "next build"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "2.0.0-beta.7",
-    "@ai-sdk/google-vertex": "3.0.0-beta.14",
-    "@ai-sdk/openai": "2.0.0-beta.10",
-    "@ai-sdk/perplexity": "2.0.0-beta.5",
-    "@ai-sdk/provider": "2.0.0-beta.1",
-    "@ai-sdk/provider-utils": "3.0.0-beta.4",
+    "@ai-sdk/anthropic": "2.0.1",
+    "@ai-sdk/google-vertex": "3.0.4",
+    "@ai-sdk/openai": "2.0.8",
+    "@ai-sdk/perplexity": "2.0.1",
+    "@ai-sdk/provider": "2.0.0",
+    "@ai-sdk/provider-utils": "3.0.1",
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
     "@aws-sdk/client-s3": "^3.758.0",
@@ -65,7 +65,7 @@
     "@tailwindcss/typography": "0.5.9",
     "@tanstack/react-table": "^8.21.2",
     "@uiw/react-codemirror": "^4.23.6",
-    "ai": "5.0.0-beta.23",
+    "ai": "5.0.9",
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
     "autoprefixer": "^10.4.16",
