--- a/logicle/package.json
+++ b/logicle/package.json
@@ -34,7 +34,9 @@
     "@aws-sdk/util-format-url": "^3.734.0",
     "@bkfullstack/table-to-excel": "^1.0.10",
     "@boxyhq/saml-jackson": "1.45.0",
+    "@codemirror/lang-markdown": "^6.3.4",
     "@codemirror/lang-yaml": "^6.1.1",
+    "@codemirror/language-data": "^6.5.1",
     "@codemirror/lint": "^6.8.4",
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
