--- a/logicle/package.json
+++ b/logicle/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev --turbo",
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
-    "build": "DATABASE_URL=memory: next build",
+    "build": "DATABASE_URL=memory: next build --turbopack",
     "start": "next start",
     "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
@@ -98,7 +98,7 @@
     "mime-types": "^3.0.1",
     "moment": "2.29.4",
     "nanoid": "^5.0.4",
-    "next": "^15.4.1",
+    "next": "^15.5.0",
     "next-auth": "5.0.0-beta.28",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
