--- a/logicle/package.json
+++ b/logicle/package.json
@@ -11,7 +11,7 @@
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
-    "check-lint": "eslint .",
+    "lint": "biome check",
     "format": "prettier --write .",
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
     "test": "jest",
@@ -141,6 +141,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.0",
     "@tailwindcss/forms": "0.5.6",
     "@testing-library/jest-dom": "6.1.2",
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
@@ -158,14 +159,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "9.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
-    "@typescript-eslint/parser": "^8.24.0",
     "better-sqlite3": "^9.4.3",
-    "eslint": "^9.20.1",
-    "eslint-config-next": "^15.1.7",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-i18next": "^6.1.1",
-    "eslint-plugin-react": "^7.37.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "kysely-codegen": "^0.11.0",
@@ -174,8 +168,7 @@
     "prettier-plugin-tailwindcss": "0.5.4",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.24.0"
+    "typescript": "^5.5.4"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix",
