--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -2,14 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
 
   "files": {
-    "includes": ["**/*.{js,ts,tsx}"],
-    "experimentalScannerIgnores": [
-      "node_modules/**",
-      ".next/**",
-      "coverage/**",
-      "dist/**",
-      "**/*.d.ts"
-    ]
+    "includes": ["**/*.{js,ts,tsx}", "!node_modules", "!.next", "!dist", "!coverage"]
   },
 
   "formatter": {
@@ -83,7 +76,6 @@
         "noDangerouslySetInnerHtml": "off"
       },
       "style": {
-        "useConst": "off",
         "useImportType": "off",
         "useTemplate": "off",
         "noNonNullAssertion": "off",
