--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -80,7 +80,7 @@
         "useTemplate": "off",
         "noNonNullAssertion": "off",
         "useNodejsImportProtocol": "off",
-        "useArrayLiterals": "off"
+        "useArrayLiterals": "error"
       }
     }
   },
