Reintroduced style/useNodejsImportProtocol

--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -78,9 +78,7 @@
       "style": {
         "useImportType": "off",
         "useTemplate": "off",
-        "noNonNullAssertion": "off",
-        "useNodejsImportProtocol": "off",
-        "useArrayLiterals": "error"
+        "noNonNullAssertion": "off"
       }
     }
   },
