--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -47,7 +47,12 @@
         "noUselessRename": "off"
       },
       "correctness": {
-        "noUnusedVariables": "off",
+        "noUnusedVariables": {
+          "level": "warn",
+          "options": {
+            "ignoreRestSiblings": true
+          }
+        },
         "noUnusedImports": "off",
         "useUniqueElementIds": "off",
         "noUnusedFunctionParameters": "off",
