--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -52,7 +52,7 @@
             "ignoreRestSiblings": true
           }
         },
-        "noUnusedImports": "off",
+        "noUnusedImports": "on",
         "useUniqueElementIds": "off",
         "noUnusedFunctionParameters": "off",
         "useExhaustiveDependencies": "off",
