Revert "Reintroduce noPrototypeBuiltins"
This reverts commit 3d145d93f4976f393b4aee7c43642d10880b59d3.

--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -67,7 +67,8 @@
         "useIterableCallbackReturn": "off",
         "noArrayIndexKey": "off",
         "noEmptyInterface": "off",
-        "noImplicitAnyLet": "off"
+        "noImplicitAnyLet": "off",
+        "noPrototypeBuiltins": "off"
       },
       "security": {
         "noDangerouslySetInnerHtml": "off"
