Reintroduced and fixed noUselessRename

--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -40,8 +40,7 @@
         "noUselessTernary": "off",
         "noUselessConstructor": "off",
         "noFlatMapIdentity": "off",
-        "noUselessUndefinedInitialization": "off",
-        "noUselessRename": "off"
+        "noUselessUndefinedInitialization": "off"
       },
       "correctness": {
         "noUnusedVariables": {
