--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -36,8 +36,7 @@
         "noUselessFragments": "off",
         "useOptionalChain": "off",
         "useLiteralKeys": "off",
-        "noUselessTernary": "off",
-        "noUselessUndefinedInitialization": "off"
+        "noUselessTernary": "off"
       },
       "correctness": {
         "noUnusedVariables": {
