Fixed and restored useLiteralKeys

--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -27,8 +27,7 @@
         "useHtmlLang": "off"
       },
       "complexity": {
-        "noStaticOnlyClass": "off",
-        "useLiteralKeys": "off"
+        "noStaticOnlyClass": "off"
       },
       "correctness": {
         "noUnusedVariables": {
