--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -44,8 +44,7 @@
       "suspicious": {
         "noExplicitAny": "off",
         "useIterableCallbackReturn": "off",
-        "noArrayIndexKey": "off",
-        "noPrototypeBuiltins": "off"
+        "noArrayIndexKey": "off"
       },
       "style": {
         "useImportType": "off",
