--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,8 @@ jobs:
             ${{ github.repository }}
           tags: |
             type=semver,pattern={{raw}}
-            type=raw,value=latest
+            # only when you tick “Set as the latest release”
+            type=raw,value=latest,enable=${{ github.event.release.is_latest }}
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
