--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           tags: |
             type=semver,pattern={{raw}}
             # only when you tick “Set as the latest release”
-            type=raw,value=latest,enable=${{ github.event.release.is_latest }}
+            type=raw,value=latest,enable=${{ github.event.release && github.event.release.is_latest || false }}
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
