--- a/logicle/package.json
+++ b/logicle/package.json
@@ -100,6 +100,7 @@
     "nanoid": "^5.0.4",
     "next": "^15.5.0",
     "next-auth": "5.0.0-beta.28",
+    "next-rest-framework": "^6.0.7",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
     "openai": "^4.96.0",
@@ -168,7 +169,7 @@
     "prettier-plugin-tailwindcss": "0.5.4",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.2"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix",
