--- a/logicle/components.json
+++ b/logicle/components.json
@@ -4,7 +4,7 @@
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.js",
+    "config": "tailwind.config.cjs",
     "css": "styles/globals.css",
     "baseColor": "zinc",
     "cssVariables": true
