--- a/logicle/package.json
+++ b/logicle/package.json
@@ -17,7 +17,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage --env=jsdom",
-    "build-ci": "next build"
+    "build-ci": "next build",
+    "generate": "DATABASE_URL=memory: FILE_STORAGE_LOCATION=. NODE_OPTIONS='--import=tsx' next-rest-framework generate",
+    "validate": "FILE_STORAGE_LOCATION=. NODE_OPTIONS='--import=tsx' next-rest-framework validate"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "2.0.6",
@@ -169,7 +171,9 @@
     "prettier-plugin-tailwindcss": "0.5.4",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
+    "why-is-node-running": "^3.2.2"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix",
@@ -183,5 +187,6 @@
       "react": "^18 || ^19",
       "react-dom": "^18 || ^19"
     }
-  }
+  },
+  "type": "module"
 }
