--- a/logicle/tsconfig.json
+++ b/logicle/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "types": ["node", "jest"],
-    "target": "es2017",
-    "lib": ["dom", "dom.iterable"],
+    "target": "es2022",
+    "lib": ["ES2022", "dom", "dom.iterable"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
