--- a/logicle/package.json
+++ b/logicle/package.json
@@ -110,6 +110,7 @@
     "openapi-types": "^12.1.3",
     "openid-client": "^6.4.2",
     "openpgp": "^6.1.1",
+    "pdf.js-extract": "^0.2.1",
     "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.1.0",
@@ -136,6 +137,7 @@
     "swr": "2.3.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.1",
     "undici": "^7.3.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
@@ -162,6 +164,7 @@
     "@types/pg": "^8.11.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "^18.3.1",
+    "@types/turndown": "^5.0.5",
     "@types/uuid": "9.0.3",
     "better-sqlite3": "^9.4.3",
     "jest": "^29.7.0",
