--- a/logicle/package.json
+++ b/logicle/package.json
@@ -138,6 +138,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "turndown": "^7.2.1",
+    "turndown-plugin-gfm": "^1.0.2",
     "undici": "^7.3.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
