--- a/logicle/package.json
+++ b/logicle/package.json
@@ -45,6 +45,7 @@
     "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
     "@modelcontextprotocol/sdk": "^1.16.0",
+    "@opendocsg/pdf2md": "^0.2.2",
     "@openrouter/ai-sdk-provider": "^0.4.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -110,7 +111,6 @@
     "openapi-types": "^12.1.3",
     "openid-client": "^6.4.2",
     "openpgp": "^6.1.1",
-    "pdf.js-extract": "^0.2.1",
     "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.1.0",
