More formats (pdf + microsoft) in assistant messages (#583)

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -45,6 +45,7 @@
     "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
     "@modelcontextprotocol/sdk": "^1.16.0",
+    "@opendocsg/pdf2md": "^0.2.2",
     "@openrouter/ai-sdk-provider": "^0.4.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -95,6 +96,7 @@
     "kysely": "^0.27.4",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.487.0",
+    "mammoth": "^1.10.0",
     "mermaid": "^11.6.0",
     "micromatch": "^4.0.5",
     "mime-types": "^3.0.1",
@@ -135,6 +137,8 @@
     "swr": "2.3.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.1",
+    "turndown-plugin-gfm": "^1.0.2",
     "undici": "^7.3.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
@@ -161,6 +165,7 @@
     "@types/pg": "^8.11.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "^18.3.1",
+    "@types/turndown": "^5.0.5",
     "@types/uuid": "9.0.3",
     "better-sqlite3": "^9.4.3",
     "jest": "^29.7.0",
