--- a/logicle/package.json
+++ b/logicle/package.json
@@ -70,6 +70,7 @@
     "@tailwindcss/typography": "0.5.9",
     "@tanstack/react-table": "^8.21.2",
     "@uiw/react-codemirror": "^4.23.6",
+    "@vercel/otel": "^1.13.0",
     "ai": "5.0.22",
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
