Reverting to "shared" edge / node instrumentation

--- a/logicle/.env
+++ b/logicle/.env
@@ -27,6 +27,5 @@ OPENAPI_FETCH_TIMEOUT_SECS=3600
 # MAX_CONVERSATION_RESULTS=1000
 
 NEXT_TELEMETRY_DISABLED=1
-OTEL_SERVICE_NAME=logicle-app
-OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+# This endpoint must be... a json endpoint, not grpc!!!!
 OTEL_EXPORTER_OTLP_ENDPOINT=http://10.0.0.7:4318
