Integration with opentelemetry (#588)

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -47,6 +47,12 @@
     "@modelcontextprotocol/sdk": "^1.16.0",
     "@opendocsg/pdf2md": "^0.2.2",
     "@openrouter/ai-sdk-provider": "^0.4.3",
+    "@opentelemetry/api-logs": "^0.203.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-logs": "^0.203.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
+    "@opentelemetry/winston-transport": "^0.14.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -70,6 +76,7 @@
     "@tailwindcss/typography": "0.5.9",
     "@tanstack/react-table": "^8.21.2",
     "@uiw/react-codemirror": "^4.23.6",
+    "@vercel/otel": "^1.13.0",
     "ai": "5.0.22",
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
