--- a/logicle/.env
+++ b/logicle/.env
@@ -25,3 +25,7 @@ OPENAPI_TOOL_REQUIRE_CONFIRM=0
 OPENAPI_FETCH_TIMEOUT_SECS=3600
 # Limit the number of conversations returned by conversion list API
 # MAX_CONVERSATION_RESULTS=1000
+
+NEXT_TELEMETRY_DISABLED=1
+# This endpoint must be... a json endpoint, not grpc!!!!
+OTEL_EXPORTER_OTLP_ENDPOINT=http://10.0.0.7:4318
