--- a/logicle/.env
+++ b/logicle/.env
@@ -28,4 +28,4 @@ OPENAPI_FETCH_TIMEOUT_SECS=3600
 
 NEXT_TELEMETRY_DISABLED=1
 # This endpoint must be... a json endpoint, not grpc!!!!
-OTEL_EXPORTER_OTLP_ENDPOINT=http://10.0.0.7:4318
+#OTEL_EXPORTER_OTLP_ENDPOINT=http://telemetry.example.com:4318
