--- a/logicle/package.json
+++ b/logicle/package.json
@@ -135,10 +135,12 @@
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
+    "remark-docx": "^0.1.8",
     "remark-gfm": "4.0",
     "remark-math": "^6.0.0",
     "remark-mdx": "^3.1.0",
     "remark-mermaid-plugin": "^1.0.2",
+    "remark-parse": "^11.0.0",
     "sharp": "^0.32.6",
     "strip-markdown": "^6.0.0",
     "swr": "2.3.3",
