Limit upload size

--- a/logicle/.env
+++ b/logicle/.env
@@ -36,3 +36,4 @@ NEXT_TELEMETRY_DISABLED=1
 # Use this to specify a host.name or other attributes. host name in containers won't make much sense!
 # OTEL_RESOURCE_ATTRIBUTES=host.name=portatile-di-luca
 KNOWLEDGE_SEND_IN_SYSTEM_PROMPT=1
+CHAT_ATTACHMENTS_MAX_SIZE=50000000
