--- a/logicle/package.json
+++ b/logicle/package.json
@@ -86,6 +86,7 @@
     "ajv-draft-04": "^1.0.0",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "2.4.3",
+    "bytes": "^3.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.1.1",
@@ -94,6 +95,7 @@
     "dayjs": "^1.11.10",
     "eventsource-parser": "^1.0.0",
     "exceljs": "^4.4.0",
+    "filesize": "^11.0.13",
     "form-data": "^4.0.2",
     "google-auth-library": "^9.15.1",
     "i18next": "^24.1.0",
