--- a/logicle/package.json
+++ b/logicle/package.json
@@ -165,13 +165,11 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.0",
     "@tailwindcss/forms": "0.5.6",
-    "@testing-library/jest-dom": "6.1.2",
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@types/bcryptjs": "2.4.3",
     "@types/better-sqlite3": "^7.6.9",
     "@types/codemirror": "^5.60.15",
     "@types/i18next": "^12.1.0",
-    "@types/jest": "29.5.4",
     "@types/mdast": "^4.0.4",
     "@types/mime-types": "^3.0.1",
     "@types/mocha": "10.0.1",
@@ -182,9 +180,8 @@
     "@types/react-dom": "^18.3.1",
     "@types/turndown": "^5.0.5",
     "@types/uuid": "9.0.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "better-sqlite3": "^9.4.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "29.7.0",
     "kysely-codegen": "^0.11.0",
     "lint-staged": "14.0.1",
     "prettier": "3.0.3",
@@ -193,6 +190,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
+    "vitest": "^3.2.4",
     "why-is-node-running": "^3.2.2"
   },
   "lint-staged": {
