Update next / next-auth / spinner

--- a/logicle/tsconfig.json
+++ b/logicle/tsconfig.json
@@ -1,8 +1,14 @@
 {
   "compilerOptions": {
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
     "target": "es2022",
-    "lib": ["ES2022", "dom", "dom.iterable"],
+    "lib": [
+      "ES2022",
+      "dom",
+      "dom.iterable"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -13,24 +19,50 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "baseUrl": ".",
     "noImplicitAny": false,
     "paths": {
-      "@/lib/*": ["lib/*"],
-      "@/components/*": ["components/*"],
-      "@/services/*": ["services/*"],
-      "@/utils/*": ["utils/*"],
-      "@/hooks/*": ["hooks/*"],
-      "@/types/*": ["types/*"],
-      "@/pages/*": ["pages/*"],
-      "@/models/*": ["models/*"],
-      "@/app/*": ["app/*"],
-      "@/api/*": ["app/api/*"],
-      "@/db/*": ["db/*"],
-      "@/context/*": ["context/*"],
-      "@/ee/*": ["ee/*"]
+      "@/lib/*": [
+        "lib/*"
+      ],
+      "@/components/*": [
+        "components/*"
+      ],
+      "@/services/*": [
+        "services/*"
+      ],
+      "@/utils/*": [
+        "utils/*"
+      ],
+      "@/hooks/*": [
+        "hooks/*"
+      ],
+      "@/types/*": [
+        "types/*"
+      ],
+      "@/pages/*": [
+        "pages/*"
+      ],
+      "@/models/*": [
+        "models/*"
+      ],
+      "@/app/*": [
+        "app/*"
+      ],
+      "@/api/*": [
+        "app/api/*"
+      ],
+      "@/db/*": [
+        "db/*"
+      ],
+      "@/context/*": [
+        "context/*"
+      ],
+      "@/ee/*": [
+        "ee/*"
+      ]
     },
     "plugins": [
       {
@@ -45,10 +77,12 @@
     "**/*.ts",
     "**/*.tsx",
     "next-auth.d.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
-  "exclude": ["node_modules"],
-
+  "exclude": [
+    "node_modules"
+  ],
   "ts-node": {
     // these options are overrides used only by ts-node
     "compilerOptions": {
