Experimenting with web sockets

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -2,11 +2,11 @@
   "name": "@logicleai/logicle",
   "version": "0.26-snapshot",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "node server.js --turbo",
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
     "build": "DATABASE_URL=memory: next build --turbopack",
-    "start": "next start",
+    "start": "node server.js",
     "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
@@ -104,6 +104,7 @@
     "javascript-time-ago": "^2.5.11",
     "jose": "^6.0.11",
     "js-tiktoken": "^1.0.8",
+    "json-rpc-2.0": "^1.7.1",
     "json-schema": "^0.4.0",
     "katex": "^0.16.21",
     "kysely": "^0.27.4",
@@ -154,11 +155,13 @@
     "tailwindcss-animate": "^1.0.7",
     "turndown": "^7.2.1",
     "turndown-plugin-gfm": "^1.0.2",
+    "typed-rpc": "^6.1.2",
     "undici": "^7.3.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "uuid": "9.0.0",
     "winston": "^3.15.0",
+    "ws": "^8.18.3",
     "yaml": "^2.6.0",
     "zod": "^3.25.76"
   },
