Hack websockets support into standalone build

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -2,10 +2,10 @@
   "name": "@logicleai/logicle",
   "version": "0.26-snapshot",
   "scripts": {
-    "dev": "node server.js --turbo",
+    "dev": "tsx server.ts --turbo",
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
-    "build": "DATABASE_URL=memory: next build --turbopack",
+    "build": "DATABASE_URL=memory: next build --turbopack && tsup",
     "start": "node server.js",
     "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
@@ -183,6 +183,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/turndown": "^5.0.5",
     "@types/uuid": "9.0.3",
+    "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^3.2.4",
     "better-sqlite3": "^9.4.3",
     "kysely-codegen": "^0.11.0",
@@ -191,6 +192,7 @@
     "prettier-plugin-tailwindcss": "0.5.4",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.2",
+    "tsup": "^8.5.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4",
