Leftover from previous commit

--- a/logicle/tsconfig.json
+++ b/logicle/tsconfig.json
@@ -47,7 +47,7 @@
     "next-auth.d.ts",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "lib/sidecarHub.ts",
+    "lib/satelliteHub.ts",
     "server.ts"
   ],
   "exclude": ["node_modules"],
