WebSocket based satellites (#652)

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -2,11 +2,11 @@
   "name": "@logicleai/logicle",
   "version": "0.26-snapshot",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "tsx server.ts --turbo",
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
-    "build": "DATABASE_URL=memory: next build --turbopack",
-    "start": "next start",
+    "build": "DATABASE_URL=memory: next build --turbopack && tsup",
+    "start": "node server.js",
     "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
@@ -159,6 +159,7 @@
     "unist-util-visit": "^5.0.0",
     "uuid": "9.0.0",
     "winston": "^3.15.0",
+    "ws": "^8.18.3",
     "yaml": "^2.6.0",
     "zod": "^3.25.76"
   },
@@ -170,6 +171,7 @@
     "@types/better-sqlite3": "^7.6.9",
     "@types/codemirror": "^5.60.15",
     "@types/i18next": "^12.1.0",
+    "@types/json-schema": "^7.0.15",
     "@types/mdast": "^4.0.4",
     "@types/mime-types": "^3.0.1",
     "@types/mocha": "10.0.1",
@@ -180,6 +182,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/turndown": "^5.0.5",
     "@types/uuid": "9.0.3",
+    "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^3.2.4",
     "better-sqlite3": "^9.4.3",
     "kysely-codegen": "^0.11.0",
@@ -188,6 +191,7 @@
     "prettier-plugin-tailwindcss": "0.5.4",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.2",
+    "tsup": "^8.5.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4",
