--- a/logicle/package.json
+++ b/logicle/package.json
@@ -32,9 +32,6 @@
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-storage": "^3.758.0",
-    "@aws-sdk/s3-request-presigner": "^3.696.0",
-    "@aws-sdk/util-format-url": "^3.734.0",
-    "@bkfullstack/table-to-excel": "^1.0.10",
     "@codemirror/lang-markdown": "^6.3.4",
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/language-data": "^6.5.1",
@@ -46,11 +43,9 @@
     "@modelcontextprotocol/sdk": "^1.18.1",
     "@node-saml/node-saml": "^5.1.0",
     "@opendocsg/pdf2md": "^0.2.2",
-    "@openrouter/ai-sdk-provider": "^0.4.3",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.203.0",
     "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
-    "@opentelemetry/instrumentation-http": "^0.205.0",
     "@opentelemetry/resources": "^2.0.1",
     "@opentelemetry/sdk-logs": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.1.0",
@@ -58,12 +53,10 @@
     "@opentelemetry/winston-transport": "^0.14.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -90,17 +83,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.1.1",
-    "cookies-next": "3.0.0",
-    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
-    "eventsource-parser": "^1.0.0",
     "exceljs": "^4.4.0",
     "fast-xml-parser": "^5.3.2",
     "filesize": "^11.0.13",
     "form-data": "^4.0.2",
     "google-auth-library": "^9.15.1",
     "i18next": "^24.1.0",
-    "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "iron-session": "^8.0.4",
     "javascript-time-ago": "^2.5.11",
@@ -115,7 +104,6 @@
     "mermaid": "^11.6.0",
     "micromatch": "^4.0.5",
     "mime-types": "^3.0.1",
-    "moment": "2.29.4",
     "nanoid": "^5.0.4",
     "next": "^16.0.7",
     "next-rest-framework": "^6.0.7",
@@ -145,8 +133,6 @@
     "remark-docx": "^0.1.8",
     "remark-gfm": "4.0",
     "remark-math": "^6.0.0",
-    "remark-mdx": "^3.1.0",
-    "remark-mermaid-plugin": "^1.0.2",
     "remark-parse": "^11.0.0",
     "sharp": "^0.32.6",
     "strip-markdown": "^6.0.0",
@@ -158,7 +144,6 @@
     "undici": "^7.3.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
-    "uuid": "9.0.0",
     "winston": "^3.15.0",
     "ws": "^8.18.3",
     "yaml": "^2.6.0",
@@ -175,7 +160,6 @@
     "@types/json-schema": "^7.0.15",
     "@types/mdast": "^4.0.4",
     "@types/mime-types": "^3.0.1",
-    "@types/mocha": "10.0.1",
     "@types/node": "^20.6.3",
     "@types/nodemailer": "6.4.9",
     "@types/passport-local": "^1.0.38",
@@ -183,11 +167,8 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "^18.3.1",
     "@types/turndown": "^5.0.5",
-    "@types/uuid": "9.0.3",
     "@types/ws": "^8.18.1",
-    "@vitest/coverage-v8": "^3.2.4",
     "better-sqlite3": "^9.4.3",
-    "kysely-codegen": "^0.11.0",
     "lint-staged": "14.0.1",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
@@ -196,8 +177,7 @@
     "tsup": "^8.5.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
-    "vitest": "^3.2.4",
-    "why-is-node-running": "^3.2.2"
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix",
