--- a/logicle/package.json
+++ b/logicle/package.json
@@ -105,6 +105,7 @@
     "jose": "^6.0.11",
     "js-tiktoken": "^1.0.8",
     "json-schema": "^0.4.0",
+    "jsonwebtoken": "^9.0.2",
     "katex": "^0.16.21",
     "kysely": "^0.27.4",
     "lru-cache": "^11.0.2",
@@ -124,6 +125,7 @@
     "openapi-types": "^12.1.3",
     "openid-client": "^6.4.2",
     "openpgp": "^6.1.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.1.0",
@@ -177,6 +179,7 @@
     "@types/mocha": "10.0.1",
     "@types/node": "^20.6.3",
     "@types/nodemailer": "6.4.9",
+    "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.11.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "^18.3.1",
