--- a/logicle/package.json
+++ b/logicle/package.json
@@ -46,6 +46,7 @@
     "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
     "@modelcontextprotocol/sdk": "^1.18.1",
+    "@node-saml/passport-saml": "^5.1.0",
     "@opendocsg/pdf2md": "^0.2.2",
     "@openrouter/ai-sdk-provider": "^0.4.3",
     "@opentelemetry/api": "^1.9.0",
@@ -125,6 +126,7 @@
     "openapi-types": "^12.1.3",
     "openid-client": "^6.4.2",
     "openpgp": "^6.1.1",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.14.1",
     "react": "^19.1.0",
