--- a/logicle/package.json
+++ b/logicle/package.json
@@ -128,6 +128,7 @@
     "openpgp": "^6.1.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "passport-openidconnect": "^0.1.2",
     "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.1.0",
@@ -182,6 +183,7 @@
     "@types/node": "^20.6.3",
     "@types/nodemailer": "6.4.9",
     "@types/passport-local": "^1.0.38",
+    "@types/passport-openidconnect": "^0.1.3",
     "@types/pg": "^8.11.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "^18.3.1",
