--- a/logicle/.env
+++ b/logicle/.env
@@ -37,5 +37,9 @@ NEXT_TELEMETRY_DISABLED=1
 # OTEL_RESOURCE_ATTRIBUTES=host.name=portatile-di-luca
 KNOWLEDGE_SEND_IN_SYSTEM_PROMPT=1
 CHAT_ATTACHMENTS_MAX_SIZE=50000000
+
+# Api key support
 ENABLE_APIKEYS=1
+
+# Users can create api keys via UI
 ENABLE_APIKEYS_UI=0
