baby steps with passport-openidconnect

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -41,6 +41,7 @@
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/language-data": "^6.5.1",
     "@codemirror/lint": "^6.8.4",
+    "@govtechsg/passport-openidconnect": "^1.0.3",
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mjackson/headers": "^0.10.0",
@@ -128,7 +129,6 @@
     "openpgp": "^6.1.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-openidconnect": "^0.1.2",
     "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.1.0",
