Oidc more or less working

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -103,6 +103,7 @@
     "i18next": "^24.1.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
+    "iron-session": "^8.0.4",
     "javascript-time-ago": "^2.5.11",
     "jose": "^6.0.11",
     "js-tiktoken": "^1.0.8",
