--- a/logicle/package.json
+++ b/logicle/package.json
@@ -41,13 +41,12 @@
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/language-data": "^6.5.1",
     "@codemirror/lint": "^6.8.4",
-    "@govtechsg/passport-openidconnect": "^1.0.3",
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
     "@modelcontextprotocol/sdk": "^1.18.1",
-    "@node-saml/passport-saml": "^5.1.0",
+    "@node-saml/node-saml": "^5.1.0",
     "@opendocsg/pdf2md": "^0.2.2",
     "@openrouter/ai-sdk-provider": "^0.4.3",
     "@opentelemetry/api": "^1.9.0",
@@ -184,7 +183,6 @@
     "@types/node": "^20.6.3",
     "@types/nodemailer": "6.4.9",
     "@types/passport-local": "^1.0.38",
-    "@types/passport-openidconnect": "^0.1.3",
     "@types/pg": "^8.11.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "^18.3.1",
