--- a/logicle/package.json
+++ b/logicle/package.json
@@ -79,6 +79,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/typography": "0.5.9",
     "@tanstack/react-table": "^8.21.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@uiw/react-codemirror": "^4.23.6",
     "@vercel/otel": "^2.0.1",
     "ai": "5.0.70",
