--- a/logicle/package.json
+++ b/logicle/package.json
@@ -96,6 +96,7 @@
     "dayjs": "^1.11.10",
     "eventsource-parser": "^1.0.0",
     "exceljs": "^4.4.0",
+    "fast-xml-parser": "^5.3.2",
     "filesize": "^11.0.13",
     "form-data": "^4.0.2",
     "google-auth-library": "^9.15.1",
