--- a/logicle/package.json
+++ b/logicle/package.json
@@ -30,13 +30,11 @@
     "@ai-sdk/provider": "2.0.0",
     "@ai-sdk/provider-utils": "3.0.12",
     "@apidevtools/openapi-schemas": "^2.1.0",
-    "@auth/kysely-adapter": "^1.4.2",
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-storage": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.696.0",
     "@aws-sdk/util-format-url": "^3.734.0",
     "@bkfullstack/table-to-excel": "^1.0.10",
-    "@boxyhq/saml-jackson": "1.45.0",
     "@codemirror/lang-markdown": "^6.3.4",
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/language-data": "^6.5.1",
@@ -46,6 +44,7 @@
     "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
     "@modelcontextprotocol/sdk": "^1.18.1",
+    "@node-saml/node-saml": "^5.1.0",
     "@opendocsg/pdf2md": "^0.2.2",
     "@openrouter/ai-sdk-provider": "^0.4.3",
     "@opentelemetry/api": "^1.9.0",
@@ -79,6 +78,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/typography": "0.5.9",
     "@tanstack/react-table": "^8.21.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@uiw/react-codemirror": "^4.23.6",
     "@vercel/otel": "^2.0.1",
     "ai": "5.0.70",
@@ -95,16 +95,18 @@
     "dayjs": "^1.11.10",
     "eventsource-parser": "^1.0.0",
     "exceljs": "^4.4.0",
+    "fast-xml-parser": "^5.3.2",
     "filesize": "^11.0.13",
     "form-data": "^4.0.2",
     "google-auth-library": "^9.15.1",
     "i18next": "^24.1.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
+    "iron-session": "^8.0.4",
     "javascript-time-ago": "^2.5.11",
-    "jose": "^6.0.11",
     "js-tiktoken": "^1.0.8",
     "json-schema": "^0.4.0",
+    "jsonwebtoken": "^9.0.2",
     "katex": "^0.16.21",
     "kysely": "^0.27.4",
     "lru-cache": "^11.0.2",
@@ -116,13 +118,12 @@
     "moment": "2.29.4",
     "nanoid": "^5.0.4",
     "next": "^16.0.7",
-    "next-auth": "5.0.0-beta.30",
     "next-rest-framework": "^6.0.7",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
     "openai": "^4.96.0",
     "openapi-types": "^12.1.3",
-    "openid-client": "^6.4.2",
+    "openid-client": "^6.8.1",
     "openpgp": "^6.1.1",
     "pg": "^8.14.1",
     "react": "^19.1.0",
@@ -177,6 +178,7 @@
     "@types/mocha": "10.0.1",
     "@types/node": "^20.6.3",
     "@types/nodemailer": "6.4.9",
+    "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.11.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "^18.3.1",
