--- a/logicle/package.json
+++ b/logicle/package.json
@@ -146,6 +146,7 @@
     "unist-util-visit": "^5.0.0",
     "winston": "^3.15.0",
     "ws": "^8.18.3",
+    "xlsx": "^0.18.5",
     "yaml": "^2.6.0",
     "zod": "^3.25.76"
   },
