--- a/logicle/package.json
+++ b/logicle/package.json
@@ -159,6 +159,7 @@
     "unist-util-visit": "^5.0.0",
     "uuid": "9.0.0",
     "winston": "^3.15.0",
+    "xlsx": "^0.18.5",
     "yaml": "^2.6.0",
     "zod": "^3.25.76"
   },
