--- a/logicle/package.json
+++ b/logicle/package.json
@@ -6,7 +6,7 @@
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
     "build": "DATABASE_URL=memory: next build --turbopack && tsup",
-    "start": "node server.js",
+    "start": "NODE_ENV=production node dist-server/server.js",
     "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
@@ -77,7 +77,7 @@
     "ai": "5.0.70",
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.22",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
