--- a/logicle/package.json
+++ b/logicle/package.json
@@ -6,7 +6,7 @@
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
     "build": "DATABASE_URL=memory: next build --turbopack && tsup",
-    "start": "node server.js",
+    "start": "NODE_ENV=production node dist-server/server.js",
     "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
@@ -77,9 +77,8 @@
     "ai": "5.0.70",
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.22",
     "bcryptjs": "2.4.3",
-    "bytes": "^3.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.1.1",
@@ -107,8 +106,6 @@
     "nanoid": "^5.0.4",
     "next": "^16.0.7",
     "next-rest-framework": "^6.0.7",
-    "node-cache": "^5.1.2",
-    "nodemailer": "^6.9.16",
     "openai": "^4.96.0",
     "openapi-types": "^12.1.3",
     "openid-client": "^6.8.1",
