--- a/logicle/package.json
+++ b/logicle/package.json
@@ -3,11 +3,11 @@
   "version": "0.26-snapshot",
   "scripts": {
     "dev": "tsx server.ts --turbo",
-    "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
+    "dev:sqlite": "DATABASE_URL=file://${PWD}/tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
     "build": "DATABASE_URL=memory: next build --turbopack && tsup",
     "start": "NODE_ENV=production node dist-server/server.js",
-    "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
+    "start:sqlite": "DATABASE_URL=file://${PWD}/tmp/logicle.sqlite npm run start",
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
