Environment variables to enable assistant info / duplicate

--- a/logicle/.env
+++ b/logicle/.env
@@ -43,3 +43,10 @@ ENABLE_APIKEYS=1
 
 # Users can create api keys via UI
 ENABLE_APIKEYS_UI=0
+
+# Users can view informations about assistant in chat UI
+ENABLE_ASSISTANT_INFO=1
+
+# Users can duplicate assistants via UI
+ENABLE_ASSISTANT_DUPLICATE=1
+
