Documenting branding env vars

--- a/logicle/.env
+++ b/logicle/.env
@@ -50,3 +50,7 @@ ENABLE_ASSISTANT_INFO=1
 # Users can duplicate assistants via UI
 ENABLE_ASSISTANT_DUPLICATE=1
 
+# With the following options, you can provision custom paths for logo and favicon
+# Images may be put in /brand/ folder inside provision brand path, and accessed via /api/brand/...path endpoint 
+# FAVICON_PATH=/api/brands/...
+# LOGO_PATH=/api/brands/...
