--- a/logicle/package.json
+++ b/logicle/package.json
@@ -22,13 +22,13 @@
     "validate": "FILE_STORAGE_LOCATION=. NODE_OPTIONS='--import=tsx' next-rest-framework validate"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "2.0.27",
-    "@ai-sdk/google": "^2.0.23",
-    "@ai-sdk/google-vertex": "3.0.43",
-    "@ai-sdk/openai": "2.0.52",
-    "@ai-sdk/perplexity": "2.0.13",
-    "@ai-sdk/provider": "2.0.0",
-    "@ai-sdk/provider-utils": "3.0.12",
+    "@ai-sdk/anthropic": "3.0.0",
+    "@ai-sdk/google": "^3.0.0",
+    "@ai-sdk/google-vertex": "4.0.0",
+    "@ai-sdk/openai": "3.0.0",
+    "@ai-sdk/perplexity": "3.0.0",
+    "@ai-sdk/provider": "3.0.0",
+    "@ai-sdk/provider-utils": "4.0.0",
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-storage": "^3.758.0",
@@ -74,9 +74,10 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@uiw/react-codemirror": "^4.23.6",
     "@vercel/otel": "^2.0.1",
-    "ai": "5.0.70",
+    "ai": "6.0.1",
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
+    "anthropic@latest": "link:ai-sdk/anthropic@latest",
     "autoprefixer": "^10.4.22",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -88,6 +89,8 @@
     "filesize": "^11.0.13",
     "form-data": "^4.0.2",
     "google-auth-library": "^9.15.1",
+    "google-vertex@latest": "link:ai-sdk/google-vertex@latest",
+    "google@latest": "link:ai-sdk/google@latest",
     "i18next": "^24.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "iron-session": "^8.0.4",
@@ -107,6 +110,7 @@
     "next": "^16.1.0",
     "next-rest-framework": "^6.0.7",
     "openai": "^4.96.0",
+    "openai@latest": "link:ai-sdk/openai@latest",
     "openapi-types": "^12.1.3",
     "openid-client": "^6.8.1",
     "openpgp": "^6.1.1",
