Pptx text extraction

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -95,6 +95,7 @@
     "js-tiktoken": "^1.0.8",
     "json-schema": "^0.4.0",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "katex": "^0.16.21",
     "kysely": "^0.27.4",
     "lru-cache": "^11.0.2",
@@ -111,6 +112,7 @@
     "openid-client": "^6.8.1",
     "openpgp": "^6.1.1",
     "pg": "^8.14.1",
+    "pptx2json": "^0.0.10",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.1.0",
     "react-content-loader": "^7.0.0",
