--- a/logicle/package.json
+++ b/logicle/package.json
@@ -18,8 +18,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage --env=jsdom",
     "build-ci": "next build",
-    "generate": "DATABASE_URL=memory: FILE_STORAGE_LOCATION=. NODE_OPTIONS='--import=tsx' next-rest-framework generate",
-    "validate": "FILE_STORAGE_LOCATION=. NODE_OPTIONS='--import=tsx' next-rest-framework validate"
+    "generate:openapi": "DATABASE_URL=memory: FILE_STORAGE_LOCATION=. APP_URL=http://localhost:3000 NODE_OPTIONS='--import=tsx' tsx generate_openapi.ts --out public/openapi.yaml"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "3.0.0",
@@ -105,7 +104,6 @@
     "mime-types": "^3.0.1",
     "nanoid": "^5.0.4",
     "next": "^16.1.1",
-    "next-rest-framework": "^6.0.7",
     "openai": "^4.96.0",
     "openapi-types": "^12.1.3",
     "openid-client": "^6.8.1",
