Using minutes for session refresh times

--- a/logicle/.env
+++ b/logicle/.env
@@ -54,3 +54,11 @@ ENABLE_ASSISTANT_DUPLICATE=1
 # Images may be put in /brand/ folder inside provision brand path, and accessed via /api/brand/...path endpoint 
 # FAVICON_PATH=/api/brands/...
 # LOGO_PATH=/api/brands/...
+
+## Session configuration
+# Session lifetime from last refresh (hours); used for DB expiry + cookie expiry.
+SESSION_TTL_HOURS=168
+# Client refresh interval (minutes); UI calls /api/auth/refresh on this cadence.
+SESSION_REFRESH_INTERVAL_MINUTES=30
+# Minimum time between refresh attempts (minutes); prevents rapid retries.
+SESSION_REFRESH_THROTTLE_MINUTES=0.5
