Biome checks for await + linting

--- a/logicle/biome.json
+++ b/logicle/biome.json
@@ -45,6 +45,9 @@
         },
         "useExhaustiveDependencies": "off"
       },
+      "nursery": {
+        "noFloatingPromises": "error"
+      },
       "performance": {
         "noImgElement": "off"
       },
