Scripts to check i18n / drive migration

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -11,7 +11,9 @@
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
-    "lint": "biome check",
+    "lint": "biome check && npm run lint:i18n-literals",
+    "lint:i18n-literals": "tsx scripts/i18n/check-i18n-literals.ts",
+    "check:i18n": "tsx scripts/i18n/check-i18n-keys.ts",
     "format": "prettier --write .",
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
     "test": "jest",
