--- a/logicle/package.json
+++ b/logicle/package.json
@@ -3,19 +3,19 @@
   "version": "0.26-snapshot",
   "scripts": {
     "dev": "tsx server.ts --turbo",
-    "dev:sqlite": "DATABASE_URL=file://${PWD}/tmp/logicle.sqlite npm run dev",
-    "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
+    "dev:sqlite": "DATABASE_URL=file://${PWD}/tmp/logicle.sqlite pnpm run dev",
+    "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle pnpm run dev",
     "build": "DATABASE_URL=memory: next build --turbopack && tsup",
     "start": "NODE_ENV=production node dist-server/server.js",
-    "start:sqlite": "DATABASE_URL=file://${PWD}/tmp/logicle.sqlite npm run start",
-    "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
+    "start:sqlite": "DATABASE_URL=file://${PWD}/tmp/logicle.sqlite pnpm run start",
+    "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle pnpm run start",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
-    "lint": "biome check && npm run lint:i18n-literals",
+    "lint": "biome check && pnpm run lint:i18n-literals",
     "lint:i18n-literals": "tsx scripts/i18n/check-i18n-literals.ts",
     "check:i18n": "tsx scripts/i18n/check-i18n-keys.ts",
     "format": "prettier --write .",
-    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
+    "test-all": "pnpm run check-format && pnpm run check-lint && pnpm run check-types && pnpm run build",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage --env=jsdom",
