--- a/logicle/package.json
+++ b/logicle/package.json
@@ -93,6 +93,7 @@
     "i18next": "^24.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "iron-session": "^8.0.4",
+    "isolated-vm": "^6.0.2",
     "javascript-time-ago": "^2.5.11",
     "js-tiktoken": "^1.0.8",
     "json-schema": "^0.4.0",
@@ -111,6 +112,7 @@
     "openapi-types": "^12.1.3",
     "openid-client": "^6.8.1",
     "openpgp": "^6.1.1",
+    "pdfkit": "^0.17.2",
     "pg": "^8.14.1",
     "pptx2json": "^0.0.10",
     "react": "^19.1.0",
