Cherry pick 02328c98eae5ab7c6f33513202d6d903e70cb74f

--- a/logicle/.env
+++ b/logicle/.env
@@ -37,3 +37,20 @@ NEXT_TELEMETRY_DISABLED=1
 # OTEL_RESOURCE_ATTRIBUTES=host.name=portatile-di-luca
 KNOWLEDGE_SEND_IN_SYSTEM_PROMPT=1
 CHAT_ATTACHMENTS_MAX_SIZE=50000000
+
+# Api key support
+ENABLE_APIKEYS=1
+
+# Users can create api keys via UI
+ENABLE_APIKEYS_UI=0
+
+# Users can view informations about assistant in chat UI
+ENABLE_ASSISTANT_INFO=1
+
+# Users can duplicate assistants via UI
+ENABLE_ASSISTANT_DUPLICATE=1
+
+# With the following options, you can provision custom paths for logo and favicon
+# Images may be put in /brand/ folder inside provision brand path, and accessed via /api/brand/...path endpoint 
+# FAVICON_PATH=/api/brands/...
+# LOGO_PATH=/api/brands/...
