--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
+  SMOKE_IMAGE: logicle-smoke:${{ github.sha }}
 
 jobs:
   docker:
@@ -34,18 +35,78 @@ jobs:
           tags: |
             type=sha,format=long
 
+      - name: Build image for smoke test
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          load: true
+          tags: ${{ env.SMOKE_IMAGE }}
+          cache-from: type=gha,scope=nextjs-build
+          cache-to: type=gha,mode=max,scope=nextjs-build
+
+      - name: Run container smoke test
+        run: |
+          set -euo pipefail
+
+          docker run -d \
+            --name logicle-smoke \
+            -p 3000:3000 \
+            -e APP_URL=http://localhost:3000 \
+            -e DATABASE_URL=file:///data/sqlite/logicle.sqlite \
+            -e FILE_STORAGE_LOCATION=/data/files \
+            "${SMOKE_IMAGE}"
+
+          echo "Waiting for /api/health..."
+          ready=0
+          for i in $(seq 1 60); do
+            if curl -fsS http://localhost:3000/api/health | grep -q '"status":"ok"'; then
+              ready=1
+              break
+            fi
+            sleep 1
+          done
+
+          if [ "${ready}" -ne 1 ]; then
+            echo "Smoke test failed: /api/health did not become ready within 60 seconds"
+            docker logs logicle-smoke || true
+            exit 1
+          fi
+
+          check_status() {
+            local url="$1"
+            local expected="$2"
+            local code
+            code="$(curl -sS -o /dev/null -w "%{http_code}" "${url}")"
+            if [ "${code}" != "${expected}" ]; then
+              echo "Smoke test failed: ${url} returned ${code}, expected ${expected}"
+              docker logs logicle-smoke || true
+              exit 1
+            fi
+          }
+
+          check_status "http://localhost:3000/api/v1" "200"
+          check_status "http://localhost:3000/openapi.yaml" "200"
+
+      - name: Stop smoke container
+        if: always()
+        run: |
+          docker rm -f logicle-smoke || true
+
       - name: Login to GitHub Container Registry
+        if: github.event_name == 'workflow_dispatch'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: ${{ github.event_name == 'workflow_dispatch' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          cache-from: type=gha,scope=nextjs-build
-          cache-to: type=gha,mode=max,scope=nextjs-build
+      - name: Push image tags (workflow dispatch only)
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          set -euo pipefail
+          echo "${{ steps.meta.outputs.tags }}" | while IFS= read -r tag; do
+            if [ -n "${tag}" ]; then
+              docker tag "${SMOKE_IMAGE}" "${tag}"
+              docker push "${tag}"
+            fi
+          done
